deploy/deployment-be.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: smart-reviewer-be
  namespace: smart-reviewer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: smart-reviewer-be
  template:
    metadata:
      labels:
        app: smart-reviewer-be
    spec:
      containers:
        - name: be
          image: ghcr.io/martin-nef/smart-reviewer:ed2d0e5f48e04954a7630611584109639056ac92-be
          ports:
            - containerPort: 3000
