deploy/deployment-fe.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: smart-reviewer-fe
  namespace: smart-reviewer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: smart-reviewer-fe
  template:
    metadata:
      labels:
        app: smart-reviewer-fe
    spec:
      containers:
        - name: fe
          image: ghcr.io/martin-nef/smart-reviewer:a1b3ed16ae574a4ea013fef0e7eeb93d2507c1bc-fe
          ports:
            - containerPort: 80
