deploy/service-be.yaml
apiVersion: v1
kind: Service
metadata:
  name: smart-reviewer-api
  namespace: smart-reviewer
spec:
  selector:
    app: smart-reviewer-be
  ports:
    - port: 3000
      targetPort: 3000
