deploy/service-fe.yaml
apiVersion: v1
kind: Service
metadata:
  name: smart-reviewer-fe
  namespace: smart-reviewer
spec:
  selector:
    app: smart-reviewer-fe
  ports:
    - port: 80
      targetPort: 80
