deploy/ingress-fe.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: smart-reviewer-fe-ingress
  namespace: smart-reviewer
spec:
  rules:
    - host: smart-reviewer.nefcloud.top
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: smart-reviewer-fe
                port:
                  number: 80
